--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                 </div>
                 <div class="cleftbg_p">天天都有好心情吖~</div>
             </div>
-            <li id="cleft_li01" style="background-color: #ececec;"><img
-                    src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
+            <li id="cleft_li01" style="background-color: #ececec;"><img src="statics/font/ityet02.png"/><span>欢迎访问</span></li>
             <li id="cleft_li08"><img src="statics/font/ityet07.png"/><span>文章笔记</span></li>
             <!-- <li id="cleft_li07"><img src="statics/font/ityet07.png"/><span>网站源码</span></li>-->
             <li id="cleft_li05"><img src="statics/font/ityet01.png"/><span>趣站分享</span></li>
